--- a/eCommerce.html
+++ b/eCommerce.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>NETFLIX project</title>
+    <title>E-commerce Analysis</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -19,16 +19,45 @@
     <article class="wrapper style1">
         <div class="container">
             <header>
-                <h2>NETFLIX project</h2>
+                <h2>E-commerce Analysis</h2>
             </header>
-            <p class="fixP">Using the Netflix Movies & TV Shows dataset from Kaggle to practice translating information into a visual context.</p>
+            <p class="fixP">I used a fictitious dataset of online pet supply company from Datacamp to learn about e-commerce businesses.
+                First, data exploration with the dataset aiming to build sales and expense analysis. Filtering out invalid data, creating metrics and using a self-join to create a correlation matrix then, using it to build market basket analysis. Adding state-region mapping, building lifetime Value, hypothetical what-if scenario, key KPIs, etc.</p>
         </div>
     </article>
 
-    <div class="image fit">
-        <img src="images/netflix.jpg" alt="" />
-    </div>
+    <article class="wrapper style2">
+        <div class="container">
+            <header>
+                <p class="fixP" > </p>
+            </header>
+            <div class="image fit">
+                <img src="images/eCommerce01.jpg" alt="" />
+            </div>
+            <header>
+                <p class="fixP" > </p>
+            </header>
+            <header>
+                <p class="fixP" > </p>
+            </header>
+            <div class="image fit">
+                <img src="images/eCommerce02.jpg" alt="" />
+            </div>
+        </div>
+    </article>
 
+    
+
+    <!-- Visualization -->
+    <article class="wrapper style2">
+        <div class="container">
+            <span class="image fit"><img src="images/eCommerce03.jpg" alt="" /></span>
+            <header>
+                <p class="fixP">Creating a cohesive Tableau story with related dashboards. Making sure the analytics pipeline runs smoothly and effectively communicate the target insight. The dashboard showed the product and customer attributes that will result in the highest ROI for the upsell and cross-sell scenarios.</p>
+            </header>
+            
+        </div>
+    </article>
 
     <!-- Contact -->
 			<article id="contact" class="wrapper style4">
