--- a/index.html
+++ b/index.html
@@ -21,67 +21,87 @@
 			<article id="top" class="wrapper style1">
 				<div class="container">
 					<div class="row">
-						<div class="col-4 col-5-large col-12-medium">
-							<span class="image fit"><img src="images/banner01.jpg" alt="" /></span>
-						</div>
-						<div class="col-8 col-7-large col-12-medium">
+						<div class=" col-7-large col-12-medium">
 							<header>
-								<p>Hi. I'm <strong>Uyen Le</strong>.</p>
+								<p class="text-center">Hi, I'm Uyen LE!</p>
 							</header>
-							<p>And this is <strong>Miniport....</strong></p>
+							<p class="text-center">I am a third-year finance student in Finland who seeks, gathers, and translates data into valuable and comprehensible insight.</p>
 						</div>
 					</div>
+					<ul class="main-container">
+						<div class="image-part">
+							<img src="images/ava.jpg" alt="Image">
+						</div>
+						<div class="text-part">
+							<p class="tittle">About Me</p>
+							<p>A Vietnamese born and raised in Phan Thiet, a coastal city in southeast Vietnam.</p>
+							<p>Curiosity about the figures and data gathering has brought me to my chosen career.</p>
+							<p>I am a self-taught data learner with an analytical mindset. I can comprehend and manage large data sets and visualize data. I use SQL, Excel, Python, Power Bi, and Tableau for my data projects. I also have a basic knowledge of SAP and SPSS.  </p>
+							<p>I plan to dedicate myself and be a part of your team. </p>
+						</div>
+					</ul>
 				</div>
+				
 			</article>
+				
 
 		<!-- Portfolio -->
 			<article id="portfolio" class="wrapper style3">
 				<div class="container">
-					<header>
-						<h2>Some stuff I made recently.</h2>
-						<p>x</p>
+					<header class="tittlePort">
+						<h2>PROJECT PORT</h2>
+						<p>A glimpse of projects I\v been working on</p>
 					</header>
+					<nav class="horizontal-menu style3">
+						<ul>
+						  <li><a href="#"><strong>SQL</strong></a></li>
+						  <li><a href="#"><strong>Power Bi</strong></a></li>
+						  <li><a href="#"><strong>Tableau</strong></a></li>
+						  <li><a href="#"><strong>Python</strong></a></li>
+						  <li><a href="#"><strong>Excel</strong></a></li>
+						</ul>
+					  </nav>
 					<div class="row">
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="covid19.html" class="image featured"><img src="images/picCovid04.jpg" alt="" /></a>
+								<a href="covid19.html" class="image featured"><img src="images/codvidBanner.jpeg" alt="" /></a>
 								<h3><a href="covid19.html">COVID-19 Project</a></h3>
-								<p>Vietnam, China, Germany, Finland, and United State</p>
+								<p>SQL Server, Excel, Tableau</p>
 							</article>
 						</div>
 						<div class="col-4 col-6-medium col-12-small">
 							<article class="box style2">
-								<a href="NETFLIX.html" class="image featured"><img src="images/picNetflix02.jpg" alt="" /></a>
+								<a href="webScrape.html" class="image featured"><img src="images/webScrapeBanner.jpeg" alt="" /></a>
+								<h3><a href="webScrape.html">Scraping and Visualizing website data</a></h3>
+								<p>Python, Pandas, Seaborn</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="jobMarket.html" class="image featured"><img src="images/jobMarketBanner.jpeg" alt="" /></a>
+								<h3><a href="jobMarket.html">Data Analyst Job Market EDA</a></h3>
+								<p>Power BI - Power Query, DAX, Dashboards</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="supplyChain.html" class="image featured"><img src="images/supplyChainBanner.jpeg" alt="" /></a>
+								<h3><a href="supplyChain.html">Supply chain analytics</a></h3>
+								<p>Power BI - DAX, parameter, row-level security</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="eCommerce.html" class="image featured"><img src="images/eCommerceBanner.jpeg" alt="" /></a>
+								<h3><a href="eCommerce.html">E-commerce Analysis</a></h3>
+								<p>Tableau- Filtering, Self-JOIN, Metrics, Dashboards, Public Story</p>
+							</article>
+						</div>
+						<div class="col-4 col-6-medium col-12-small">
+							<article class="box style2">
+								<a href="NETFLIX.html" class="image featured"><img src="images/netFlixBanner.jpeg" alt="" /></a>
 								<h3><a href="NETFLIX.html">NETFLIX project</a></h3>
-								<p>x2xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic03.jpg" alt="" /></a>
-								<h3><a href="#">Data Analyst Job Market EDA</a></h3>
-								<p>x3xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic04.jpg" alt="" /></a>
-								<h3><a href="#">Supply chain analytics</a></h3>
-								<p>x4xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic05.jpg" alt="" /></a>
-								<h3><a href="#">E-commerce Analysis</a></h3>
-								<p>x5xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx.</p>
-							</article>
-						</div>
-						<div class="col-4 col-6-medium col-12-small">
-							<article class="box style2">
-								<a href="#" class="image featured"><img src="images/pic06.jpg" alt="" /></a>
-								<h3><a href="#">Scraping and Visualizing website data</a></h3>
-								<p>x6xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx</p>
+								<p>Netflix Tableau - Visualisation, Interactive Dashboard</p>
 							</article>
 						</div>
 					</div>
