--- a/webScrape.html
+++ b/webScrape.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>NETFLIX project</title>
+    <title>Scraping website</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -19,16 +19,22 @@
     <article class="wrapper style1">
         <div class="container">
             <header>
-                <h2>NETFLIX project</h2>
+                <h2>SCRAPING AND VISUALIZING WEBSITE DATA</h2>
             </header>
-            <p class="fixP">Using the Netflix Movies & TV Shows dataset from Kaggle to practice translating information into a visual context.</p>
+            <p class="fixP"> <strong>Use Python and Beautiful Soup to scrape data from the website. Extract data from parsed HTML, request, and export Data to CSV files. The scrapped data is then cleaned and combined with the raw data into a dataset. Finally, use a data visualization library, such as Matplotlib or Seaborn, to create a chart to visualize the correlation between book prices and types.</strong></p>
         </div>
     </article>
+    
 
-    <div class="image fit">
-        <img src="images/netflix.jpg" alt="" />
-    </div>
-
+    <!-- Visualization -->
+    <article class="wrapper style2">
+        <div class="container">
+            <header>
+                <p class="fixP"> </p>
+            </header>
+            <span class="image fit"><img src="images/webScrape.jpg" alt="image" /></span>
+        </div>
+    </article>
 
     <!-- Contact -->
 			<article id="contact" class="wrapper style4">
