--- a/jobMarket.html
+++ b/jobMarket.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>NETFLIX project</title>
+    <title>Job Market EDA</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -19,16 +19,22 @@
     <article class="wrapper style1">
         <div class="container">
             <header>
-                <h2>NETFLIX project</h2>
+                <h2>Data Analyst Job Market EDA</h2>
             </header>
-            <p class="fixP">Using the Netflix Movies & TV Shows dataset from Kaggle to practice translating information into a visual context.</p>
+            <p class="fixP"> Explore a job posting market dataset from 2017 to 2021 (from Datacamp) to investigate the most in-demand skills for data scientists, data analysts, and data engineers. As a data analyst, I want to comprehend the demand skills for my field. That’s why I chose this dataset to practice.</p>
         </div>
     </article>
 
-    <div class="image fit">
-        <img src="images/netflix.jpg" alt="" />
-    </div>
-
+    <!-- Visualization -->
+    <article class="wrapper style2">
+        <div class="container">
+            <header>
+                <p class="fixP">Building dashboards and adding interactivity with bookmarks. As a result, job posting is still increasing after years. Data Analyst is still in demand, and the salaries are trending upward.</p>
+            </header>
+            <span class="image fit"><img src="images/jobMarket01.jpg" alt="" /></span>
+            <span class="image fit"><img src="images/jobMarket02.jpg" alt="" /></span>
+        </div>
+    </article>
 
     <!-- Contact -->
 			<article id="contact" class="wrapper style4">
