--- a/supplyChain.html
+++ b/supplyChain.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <title>NETFLIX project</title>
+    <title>SUPPLY CHAIN ANALYTICS</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -19,16 +19,35 @@
     <article class="wrapper style1">
         <div class="container">
             <header>
-                <h2>NETFLIX project</h2>
+                <h2>SUPPLY CHAIN ANALYTICS</h2>
             </header>
-            <p class="fixP">Using the Netflix Movies & TV Shows dataset from Kaggle to practice translating information into a visual context.</p>
+            <p class="fixP"> I used this simulated dataset to learn about the supply chain analyst's general view. I also learned some key calculations and KPIs to apply for this supply chain aspect.</p>
         </div>
     </article>
 
-    <div class="image fit">
-        <img src="images/netflix.jpg" alt="" />
-    </div>
+    <article class="wrapper style2">
+        <div class="container">
+            <header>
+                <p class="fixP" > </p>
+            </header>
+            <div class="image fit">
+                <img src="images/supplyChain01.jpg" alt="" />
+                <img src="images/supplyChain02.jpg" alt="" />
+            </div>
+        </div>
+    </article>
 
+    
+
+    <!-- Visualization -->
+    <article class="wrapper style2">
+        <div class="container">
+            <span class="image fit"><img src="images/supplyChain03.jpg" alt="" /></span>
+            <header>
+                <p class="fixP">Starting by using a quote analysis tool to create a data model. Then, making a volume parameter and scenario analysis for cost calculation change as volume changes, adding row-level security to label the supplier to access the data depending on their roles. The volume parameter created a more extensive view for scenario volume analysis. The dashboard also showed the comparison between the buy and make options for suppliers.</p>
+            </header>
+        </div>
+    </article>
 
     <!-- Contact -->
 			<article id="contact" class="wrapper style4">
