--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
 					</header>
 					<nav class="horizontal-menu style3">
 						<ul>
-						  <li><a href="#"><strong>SQL</strong></a></li>
-						  <li><a href="#"><strong>Power Bi</strong></a></li>
-						  <li><a href="#"><strong>Tableau</strong></a></li>
-						  <li><a href="#"><strong>Python</strong></a></li>
-						  <li><a href="#"><strong>Excel</strong></a></li>
+						  <li><p> <strong>SQL</strong> </p></li>
+						  <li><p> <strong>Power Bi</strong> </p></li>
+						  <li><p> <strong>Tableau</strong></p></li>
+						  <li><p> <strong>Python</strong></p></li>
+						  <li><p> <strong>Excel</strong></p></li>
 						</ul>
 					  </nav>
 					<div class="row">
